# QVerify

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
filesforanalysis/: Readme.md
generic_models/EB/: Adv_MaliciousUser.spthy  Adv_Network.spthy  Alice.spthy  Bob.spthy  primitives.spthy
generic_models/PM/: Adv_MaliciousUser.spthy  Adv_Network.spthy  Alice.spthy  Bob.spthy  primitives.spthy
generic_models/common/ER/: FEC.spthy  REC.spthy  TWEC.spthy
generic_models/lemmas/: exec.spthy  lemmas_auth.spthy  lemmas_secrecy.spthy
simulation_for_statistical_analysis/: USAGE.md  pyproject.toml  setup.sh
simulation_for_statistical_analysis/results/: err_eb.csv  err_imr.csv  err_v1.csv
simulation_for_statistical_analysis/src/qverify_simulation/: __init__.py  cli.py  config.py
simulation_for_statistical_analysis/src/qverify_simulation/experiments/: __init__.py  v1.py
simulation_for_statistical_analysis/src/qverify_simulation/figures/: __init__.py  relative_error_pdf.py  style.py
simulation_for_statistical_analysis/src/qverify_simulation/io/: __init__.py  csv_io.py
simulation_for_statistical_analysis/src/qverify_simulation/simulation/: __init__.py  backend.py  circuits.py  eb_noise.py
simulation_for_statistical_analysis/src/qverify_simulation/statistics/: __init__.py  chsh.py  distributions.py
tools/: collect  compile_models  extract_counterexample_graphs  gen_proofs  tamarin-cleandot.py  tamarincleandotlib.py  test_models  trace_to_dot.py
